patient-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-ms-deployment
  labels:
   app.kubernetes.io/name: patient-service
   app.kubernetes.io/version: "1.0.0"
  namespace: hospital-management
spec:
  replicas: 2
  selector:
    matchLabels:
     app.kubernetes.io/name: patient-service
  template:
    metadata:
      labels:
       app.kubernetes.io/name: patient-service
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
             app.kubernetes.io/name: patient-service
      containers:
      - name: patient
        image: 014498640594.dkr.ecr.ap-south-1.amazonaws.com/dev-patient:latest
        ports:
        - containerPort: 3000
        resources:
         requests:
           cpu: 200m
           memory: 256Mi
         limits:
           cpu: 500m
           memory: 512Mi
        livenessProbe:
          httpGet:
            path: /health                # The path to check for the liveness probe
            port: 3000               # The port to check on
          initialDelaySeconds: 15  # Wait this many seconds before starting the probe
          periodSeconds: 10        # Check the probe every 10 seconds
        readinessProbe:
          httpGet:
            path: /health                # The path to check for the readiness probe
            port: 3000               # The port to check on
          initialDelaySeconds: 5   # Wait this many seconds before starting the probe
          periodSeconds: 5   
---
apiVersion: v1
kind: Service
metadata:
  name: patient-ms-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: patient-service
  ports:
    - protocol: TCP
      port: 80          # Service port (inside cluster)
      targetPort: 3000  # Container port
